--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ JWT_EXPIRE=7d
 NODE_ENV=
 MONGODB_URI=mongodb+srv://tolujohnofficial_db_user:VtrQR9sZEE16JAzP@cluster0.ogduscd.mongodb.net/?appName=Cluster0
 FRONTEND_URL=https://caycotest-1xdz.vercel.app
+MONGODB_URI_TEST=mongodb://localhost:27017/cayco
+# FRONTEND_URL_TEST=http://localhost:3000
 
 EMAIL_HOST='smtp.gmail.com'
 EMAIL_PORT=587
