--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,10 @@ NODE_ENV=
 MONGODB_URI=
 FRONTEND_URL=
 
-EMAIL_HOST=
-EMAIL_PORT=
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
 EMAIL_USER=
 EMAIL_PASS=
+# Set to true to skip sending (log links to console) when SMTP is blocked e.g. locally
+# EMAIL_DEV_SKIP_SEND=false
 
