using mail resend

--- a/.env
+++ b/.env
@@ -13,3 +13,12 @@ EMAIL_PASS=rjamdvvvnjgantws
 
 # EMAIL_DEV_SKIP_SEND=true
 
+RESEND_API_KEY=re_Pi4eopgb_J2vY4P8arSKLw8pjTYF6trxD
+# Optional: sender address. Use "Name <email@yourdomain.com>" after verifying your domain in Resend. Default: Cayco <onboarding@resend.dev>
+# RESEND_FROM=Cayco <noreply@yourdomain.com>
+# Optional: same as RESEND_FROM if you use EMAIL_FROM elsewhere
+# EMAIL_FROM=Cayco <noreply@yourdomain.com>
+
+# Set to true to skip sending (log links to console) when developing locally
+
+
