--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,12 @@ NODE_ENV=
 MONGODB_URI=
 FRONTEND_URL=
 
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=
-EMAIL_PASS=
-# Set to true to skip sending (log links to console) when SMTP is blocked e.g. locally
-# EMAIL_DEV_SKIP_SEND=false
+# Resend (https://resend.com) - API key from https://resend.com/api-keys
+RESEND_API_KEY=
+# Optional: sender address. Use "Name <email@yourdomain.com>" after verifying your domain in Resend. Default: Cayco <onboarding@resend.dev>
+# RESEND_FROM=Cayco <noreply@yourdomain.com>
+# Optional: same as RESEND_FROM if you use EMAIL_FROM elsewhere
+# EMAIL_FROM=Cayco <noreply@yourdomain.com>
 
+# Set to true to skip sending (log links to console) when developing locally
+# EMAIL_DEV_SKIP_SEND=false
