--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "seed": "node scripts/seedData.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "socket.io": "^4.6.1",
-    "nodemailer": "^6.9.7",
-    "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1",
-    "moment": "^2.29.4",
-    "cloudinary": "^1.41.0",
     "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12"
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
+    "cloudinary": "^1.41.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "resend": "^6.9.2",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
